Bug 298114 - Rekonq does not open an ftp url though Dolphin and Konqueror will
Summary: Rekonq does not open an ftp url though Dolphin and Konqueror will
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Andrea Diamantini
URL: ftp://download.nvidia.com/XFree86/Lin...
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-14 11:35 UTC by bill p. (aka google01103)
Modified: 2012-04-26 23:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bill p. (aka google01103) 2012-04-14 11:35:26 UTC
User-Agent:       Opera/9.80 (X11; Linux x86_64; U; Edition Next; en) Presto/2.10.289 Version/12.00
Build Identifier: 

Rekonq does not open an ftp url though Dolphin and Konqueror will 

url tested: ftp://download.nvidia.com/XFree86/Linux-x86_64/

running Version 0.9.55
error message:
/XFree86/Linux-x86_64/

When connecting to: ftp://download.nvidia.com/XFree86/Linux-x86_64/
Check the address for errors such as ww.kde.org instead of http://www.kde.org
If the address is correct, try to check the network connection.
If your computer or network is protected by a firewall or proxy, make sure that rekonq is permitted to access the network.
Of course, if rekonq does not work properly, you can always say it is a programmer error


Reproducible: Always

Steps to Reproduce:
1.open the aforementioned ftp url
2.
3.
Actual Results:  
error message see etails section

Expected Results:  
site displays as it does in Dolphin
Comment 1 Andrea Diamantini 2012-04-24 15:16:51 UTC
Git commit 4c0ad2049f3b49590a7d19f89ebcb767c3c15283 by Andrea Diamantini.
Committed on 24/04/2012 at 16:47.
Pushed by adjam into branch 'master'.

Clean up url management

- Let ftp url(s) work again
- Do NOT check url twice via KUriFilter (removed MainWindow::filterUrl)
- ensure we are lowering just http url hosts
- mailto via urlbar handling
Related: bug 284829

M  +4    -37   src/mainwindow.cpp
M  +0    -7    src/mainwindow.h
M  +9    -1    src/protocolhandler.cpp
M  +7    -6    src/urlbar/urlresolver.cpp
M  +4    -0    src/webpage.cpp

http://commits.kde.org/rekonq/4c0ad2049f3b49590a7d19f89ebcb767c3c15283
Comment 2 Andrea Diamantini 2012-04-26 23:37:33 UTC
Git commit 6a9e1ed2d94202eb1c7b334b1020abad64d8226f by Andrea Diamantini.
Committed on 24/04/2012 at 16:47.
Pushed by adjam into branch 'Branches.0.9'.

Clean up url management

- Let ftp url(s) work again
- Do NOT check url twice via KUriFilter (removed MainWindow::filterUrl)
- ensure we are lowering just http url hosts
- mailto via urlbar handling
Related: bug 284829

Conflicts:

	src/mainwindow.cpp

Backporting from master with the needed fixes

M  +1    -0    src/mainwindow.cpp
M  +9    -1    src/protocolhandler.cpp
M  +7    -6    src/urlbar/urlresolver.cpp
M  +4    -0    src/webpage.cpp

http://commits.kde.org/rekonq/6a9e1ed2d94202eb1c7b334b1020abad64d8226f